--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="nz.co.afleet.bit603_a2_johnmcpherson">
+    package="nz.co.afleet.bit603_a2_johnmcpherson" >
 
     <application
         android:allowBackup="true"
@@ -8,19 +8,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BIT603_A2_JohnMcPherson">
-        <activity
-            android:name=".LoginActivity"
-            android:exported="true">
-            <!--login is now the launching activity-->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        android:theme="@style/Theme.BIT603_A2_JohnMcPherson" >
         <activity
             android:name=".MainActivity"
-            android:exported="false">
+            android:exported="false"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.BIT603_A2_JohnMcPherson.NoActionBar" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true" >
+
+            <!-- login is now the launching activity -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
