Major update to libraries and project structure

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'nz.co.afleet.bit603_a2_johnmcpherson'
 }
 
 dependencies {
